tests/ui-stable/invalid-impls/invalid-impls.stderr
error[E0119]: conflicting implementations of trait `zerocopy::TryFromBytes` for type `Foo<_>`
   --> tests/ui-stable/invalid-impls/../../../src/util/macros.rs:127:9
    |
127 |         unsafe impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),* $(, const $constname: $constty,)*> $trait for $ty {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
    |
   ::: tests/ui-stable/invalid-impls/invalid-impls.rs:29:10
    |
 29 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          --------- first implementation here
...
 34 |     impl_or_verify!(T => TryFromBytes for Foo<T>);
    |     --------------------------------------------- in this macro invocation
    |
    = note: this error originates in the macro `unsafe_impl` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `zerocopy::FromZeros` for type `Foo<_>`
   --> tests/ui-stable/invalid-impls/../../../src/util/macros.rs:127:9
    |
127 |         unsafe impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),* $(, const $constname: $constty,)*> $trait for $ty {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
    |
   ::: tests/ui-stable/invalid-impls/invalid-impls.rs:29:10
    |
 29 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          --------- first implementation here
...
 35 |     impl_or_verify!(T => FromZeros for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `unsafe_impl` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `zerocopy::FromBytes` for type `Foo<_>`
   --> tests/ui-stable/invalid-impls/../../../src/util/macros.rs:127:9
    |
127 |         unsafe impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),* $(, const $constname: $constty,)*> $trait for $ty {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
    |
   ::: tests/ui-stable/invalid-impls/invalid-impls.rs:29:10
    |
 29 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          --------- first implementation here
...
 36 |     impl_or_verify!(T => FromBytes for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `unsafe_impl` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `zerocopy::IntoBytes` for type `Foo<_>`
   --> tests/ui-stable/invalid-impls/../../../src/util/macros.rs:127:9
    |
127 |         unsafe impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),* $(, const $constname: $constty,)*> $trait for $ty {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
    |
   ::: tests/ui-stable/invalid-impls/invalid-impls.rs:29:21
    |
 29 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |                     --------- first implementation here
...
 37 |     impl_or_verify!(T => IntoBytes for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `unsafe_impl` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `zerocopy::Unaligned` for type `Foo<_>`
   --> tests/ui-stable/invalid-impls/../../../src/util/macros.rs:127:9
    |
127 |         unsafe impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),* $(, const $constname: $constty,)*> $trait for $ty {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
    |
   ::: tests/ui-stable/invalid-impls/invalid-impls.rs:29:32
    |
 29 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |                                --------- first implementation here
...
 38 |     impl_or_verify!(T => Unaligned for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `unsafe_impl` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0119`.
